k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app-deployment
  namespace: myapp-ns
  labels:
    app: notes-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
    spec:
      imagePullSecrets:
      - name: mycred
      containers:
      - name: notes-app-deployment
        image: moha1992/myapp:v1
        resources:
          requests:
            cpu: "10m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - ps aux | grep node
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
