k8s/load-generator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-generator-deployment
  namespace: myapp-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: load-generator
  template:
    metadata:
      labels:
        app: load-generator
    spec:
      containers:
      - name: load-generator
        image: busybox
        command: ["/bin/sh", "-c"]
        args:
        - >
          while true; do
            for i in {1..100}; do
              wget -q -O- http://notes-app-service.default.svc.cluster.local &
            done
            wait
            sleep 1;
          done
